--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 			<div class="container">	
 			<h1><a href="index.html">Organisasi Himpunan</a></h1>
 			<ul>
-				<li class="action"><a href="index.html"></a>HOME</li>
-				<li><a href="about.html"></a>ABOUT</li>
-				<li><a href="service.html"></a>SERVICE</li>
-				<li><a href="contact.html"></a>CONTACT</li>
+				<li class="action"><a href="index.html">HOME</a></li>
+				<li><a href="about.html">ABOUT</a></li>
+				<li><a href="service.html">SERVICE</a></li>
+				<li><a href="contact.html">CONTACT</a></li>
 			</ul>
 		</div>
 	</header>
